--- a/package.json
+++ b/package.json
@@ -1,35 +1,15 @@
 {
-  "name": "my-react-app",
-  "version": "1.0.0",
-  "description": "Description of your React application",
-  "main": "index.js",
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0"
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "react-scripts": "^5.0.1"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "author": "",
-  "license": "ISC"
-}
+    "name": "backend",
+    "version": "1.0.0",
+    "description": "Backend for recipe management app",
+    "main": "express.js",
+    "scripts": {
+      "start": "node express.js"
+    },
+    "dependencies": {
+      "cors": "^2.8.5",
+      "express": "^4.17.1",
+      "sqlite3": "^5.1.7"
+    }
+  }
+  
